<resources>
    <string name="app_name">Reminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>

    <string name="about_text">Created as a final project for course PV239 at MUNI</string>

    <string name="button_select_location">Select location</string>
    <string name="button_wifi">WIFI</string>
    <string name="button_location">Location</string>
    <string name="button_event">Event</string>


    <string name="format_location">Location: %s</string>
    <string name="format_wifi">WiFI: %s</string>
    <string name="format_reminded_on">Reminded on %s</string>
    <string name="drawer_item_reminders">Reminders</string>
    <string name="drawer_item_about">About</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>

    <!-- TODO -->
    <string name="hello_blank_fragment">Temporary text</string>
    <string name="pick_time">Select time</string>
    <string name="condition_new_title">Condition</string>

    <string name="enum_condition_type_time">Time</string>
    <string name="enum_condition_type_wifi_reached">Wifi reached</string>
    <string name="enum_condition_type_wifi_lost">Wifi lost</string>
    <string name="enum_condition_type_location_reached">Location reached</string>
    <string name="enum_condition_type_location_left">Location left</string>
    <string name="conditions_title">Conditions</string>


</resources>
